# ezdxf

./: .gitignore  .hgignore  .pylintrc  .readthedocs.yaml  CHANGES_V10.md  LICENSE.txt  MANIFEST.in  Makefile  NEWS-v0.13.md  NEWS-v14.md  NEWS-v16.md  NEWS-v17.md  NEWS-v18.md  NEWS.md  NEWS.rst  NEWS.txt  README.md  README.rst  README.txt  TODO.md  fast_stress_test.bat  makefile  makefile.linux  makefile.template  makefile.win  pyproject.toml  pytest.ini  release.bat  requirements-dev.txt  requirements.txt  sdist.bat  setup.py  stress_test.bat  test.bat  test27.bat  test32.bat  test33.bat  test34.bat  test35.bat  test36.bat  (+7 more)
archive/: .gitignore  README.md  setup.py  tricy.pyx  tripy.py
autolisp/: customdocprops.lsp  showxdata.lsp
docs/: Makefile  Makefile.linux  WCS2OCS.txt  make.bat  requirements.txt
examples/: .gitignore  README.md  Spline_R2000.dxf  _template.py  append_user_data_to_entities.py  big_file_stress_test.py  binpacking.py  block_references_with_attributes.py  complex_line_type_example.py  copydxf.py  create_all_supported_dxf_versions.py  custom_header_vars.py  default_lineweights.py  dimension_linear_R12.py  draw_glyph_table.py  draw_text_frames.py  edge_miner.py  encode_decode_dxf_as_base64.py  examine_dimlines.py  exploding_block_references.py  extended_textstyle_features.py  file_structure_index.py  flags.py  geodata_setup_local_grid.py  hatch_predefined_pattern.py  import_dxf_via_browser.py  interpolate_sin_curve_by_spline.py  linetypes.py  load_comments.py  load_file_structure_index.py  loopfinder.py  ltypeshp.shx  maurer_rose.py  megagrid.py  mtext.py  mtext_in_yz_plane.py  mtext_renderer_prototype.py  open_big_facemodels.py  optimize_polyfaces.py  page_setup_R12.py  (+74 more)
examples_dxf/: .gitignore  3dface.dxf  Minimal_DXF_AC1006.dxf  Minimal_DXF_AC1009.dxf  Minimal_DXF_AC1021.dxf  README.md  VP4.dxf  acad_table_simple.dxf  acad_table_with_blk_ref.dxf  caret_encoding.dxf  caret_encoding.html  circle_radius_le_0.dxf  clockwise_arcs_hatch.dxf  colors.dxf  colors.html  columns.dxf  columns_R2007.dxf  columns_R2018.dxf  create_aci_color_table.py  create_caret_encoding.py  create_hatch_boundary_examples.py  create_hatch_pattern_examples.py  create_linetype_examples.py  create_mline_examples.py  create_mtext_column_examples.py  create_mtext_simple_all_alignments.py  create_nested_block_references.py  create_point_examples.py  create_text_alignments.py  create_transparency_checker.py  dimension_in_block.dxf  dimension_in_block.html  dimension_in_nested_blocks.dxf  hatch_issues.dxf  hatches_1.dxf  (+35 more)
(+2979 files in other folders)
